<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarillo"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/sevilogo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:contentDescription="@string/namelogo"
        android:paddingTop="10dp"
        android:src="@drawable/logotipo"
        android:textColor="@color/letra"
        android:textSize="15sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/TxtBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/namelogo"
        android:textColor="@color/rojo"
        android:textSize="42sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="@color/amarillo" />

    <Button
        android:id="@+id/BotonEncuestas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/activa"
        android:text="@string/encuesta"
        android:textColor="@color/blanco"
        android:textSize="26sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@color/amarillo" />

    <Button
        android:id="@+id/BotonTerminadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/finalizada"
        android:text="@string/terminadas"
        android:textColor="@color/blanco"
        android:textSize="26sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@color/amarillo" />

    <Button
        android:id="@+id/BotonPropuestas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/enviar"
        android:text="@string/propuesta"
        android:textColor="@color/blanco"
        android:textSize="26sp" />

</LinearLayout>